--- a/todo/ios/Podfile
+++ b/todo/ios/Podfile
@@ -1,11 +1,12 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '14.0'
 
 target 'ToDo' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for PeersList
-  pod "DittoSwift", "~>1.0.3"
+  pod "DittoSwift", "~>1.0.4"
   pod "Fakery"
+  pod "CombineDitto"
 end
