adding tasks csharp

--- a/ditto-core-data/Podfile
+++ b/ditto-core-data/Podfile
@@ -7,5 +7,18 @@ target 'DittoCoreData' do
 
   # Pods for DittoCoreData
   pod "DittoSwift", ">=1.0.4"
+
+  # Used for generating random fake data
   pod "Fakery"
+
+  pod "CodableWrappers"
+  pod "DeepDiff"
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+    end
+  end
 end
