adding simpler swiftui version

--- a/tasks/swiftui-old/Podfile
+++ b/tasks/swiftui-old/Podfile
@@ -6,5 +6,6 @@ target 'Tasks' do
   use_frameworks!
 
   # Pods for Tasks
-  pod 'DittoSwift', '>=1.0.8'
+  pod "DittoSwift", ">=1.0.8"
+  pod "CombineDitto"
 end
