--- a/tasks/electron-react-ts/package.json
+++ b/tasks/electron-react-ts/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-typescript": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -17,24 +19,28 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "babel-loader": "^8.2.4",
+    "babel-preset-react-app": "^10.0.1",
+    "css-loader": "^6.7.1",
     "electron": "^18.0.0",
+    "eslint": "^8.12.0",
+    "eslint-config-react-app": "^7.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "native-ext-loader": "^2.3.0",
     "prettier": "^2.6.1",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.6.3"
+    "style-loader": "^3.3.1",
+    "typescript": "^4.6.3",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "start": "npm run build && npm run build:electron && electron ./build/electron/main.js",
-    "start:web": "react-scripts start",
-    "build": "react-scripts build",
-    "build:electron": "tsc --outDir build/electron src/electron/*.ts",
-    "lint": "eslint --ext .tsx,.ts src",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npm run build && electron ./build/main.js",
+    "build": "NODE_ENV=production webpack",
+    "lint": "eslint --ext .tsx,.ts src && tsc --noEmit && prettier --check src public"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
