--- a/tasks/electron-forge-react-ts/package.json
+++ b/tasks/electron-forge-react-ts/package.json
@@ -99,7 +99,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@dittolive/ditto": "^1.1.6-experimental.electron-forge-support.1",
+    "@dittolive/ditto": "^1.1.6",
     "@dittolive/react-ditto": "^0.6.2",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.0.0",
