--- a/tasks/android-kotlin/ToDo/app/build.gradle
+++ b/tasks/android-kotlin/ToDo/app/build.gradle
@@ -3,16 +3,20 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "29.0.3"
+
     defaultConfig {
-        applicationId "com.dittolive.todo"
+        applicationId "live.dittolive.chat"
         minSdkVersion 26
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 16
+        versionName "3.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -36,5 +40,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'live.ditto:dittosynckit:1.0.0-alpha2'
+    implementation "live.ditto:ditto:1.1.6"
 }
