--- a/tasks/android-kotlin/ToDo/app/build.gradle
+++ b/tasks/android-kotlin/ToDo/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "live.dittolive.chat"
+        applicationId "live.dittolive.todo"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 16
