--- a/tasks/android-kotlin/ToDo/build.gradle
+++ b/tasks/android-kotlin/ToDo/build.gradle
@@ -1,10 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.32'
+    ext.kotlin_version = '1.5.31'
     repositories {
         google()
-        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -19,8 +18,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-
+        mavenCentral()
     }
 }
 
