--- a/testing/android/app/build.gradle
+++ b/testing/android/app/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "live.dittolive.chat"
@@ -28,6 +27,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'live.ditto.dittotesting'
 }
 
 dependencies {
