--- a/tasks/android-kotlin/ToDo/app/build.gradle
+++ b/tasks/android-kotlin/ToDo/app/build.gradle
@@ -3,19 +3,18 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "29.0.3"
+    namespace 'com.dittolive.todo'
+    compileSdkVersion 32
 
     defaultConfig {
-        applicationId "live.dittolive.todo"
+        applicationId "com.dittolive.todo"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 16
         versionName "3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
 
     buildTypes {
         release {
@@ -31,14 +30,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'live.ditto:ditto:1.1.7'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.material:material:1.6.0'
+
     testImplementation "junit:junit:4.13.2"
+
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "live.ditto:ditto:1.1.6"
 }
