--- a/tasks/electron-react-ts/package.json
+++ b/tasks/electron-react-ts/package.json
@@ -18,6 +18,8 @@
     "babel-preset-react-app": "^10.0.1",
     "css-loader": "^6.7.1",
     "electron": "^18.0.0",
+    "electron-builder": "^22.11.7",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.12.0",
     "eslint-config-react-app": "^7.0.0",
     "html-webpack-plugin": "^5.5.0",
@@ -31,7 +33,13 @@
   "scripts": {
     "start": "npm run build && electron --enable-logging ./build/main.js",
     "build": "NODE_ENV=production webpack",
-    "lint": "eslint --ext .tsx,.ts src && tsc --noEmit && prettier --check ."
+    "lint": "eslint --ext .tsx,.ts src && tsc --noEmit && prettier --check .",
+    "build:mac:x64": "env-cmd electron-builder -m --x64 --publish never",
+    "build:win:x64": "env-cmd electron-builder -w --x64 --publish never",
+    "build:linux:x64": "env-cmd electron-builder -l --x64 --publish never",
+    "release:mac:x64": "env-cmd cross-env NODE_ENV=production electron-builder -m --x64 --publish always",
+    "release:win:x64": "env-cmd cross-env NODE_ENV=production electron-builder -w --x64 --publish always",
+    "release:linux:x64": "env-cmd cross-env NODE_ENV=production electron-builder -l --x64 --publish always"
   },
   "eslintConfig": {
     "extends": [
