Update to v2 and test C# auth server

--- a/c-sharp-server/AuthServer/AuthServer.csproj
+++ b/c-sharp-server/AuthServer/AuthServer.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ditto" Version="1.1.10" />
+    <PackageReference Include="Ditto" Version="2.0.0-alpha1" />
   </ItemGroup>
 
 </Project>
