--- a/tasks/android-java/ToDo/app/build.gradle
+++ b/tasks/android-java/ToDo/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 30
     defaultConfig {
         applicationId "com.dittolive.todo"
-        minSdkVersion 26
+        minSdkVersion 30
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -30,5 +30,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'live.ditto:dittosynckit:1.0.0-alpha2'
+    implementation "live.ditto:ditto:2.0.0-alpha1"
 }
