Update rust SDK example

--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -3,9 +3,6 @@ name = "rs"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-
-[dependencies.dittolive-ditto]
-version = "2.0.0-alpha1"
+dittolive-ditto = "2.0.7"
+structopt = "0.3.26"
