--- a/DittoCombineExample/DittoCombineExample/Info.plist
+++ b/DittoCombineExample/DittoCombineExample/Info.plist
@@ -6,5 +6,12 @@
 	<array>
 		<string>_http-alt._tcp.</string>
 	</array>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<true/>
+		<key>UISceneConfigurations</key>
+		<dict/>
+	</dict>
 </dict>
 </plist>
