--- a/tasks/nodejs/package.json
+++ b/tasks/nodejs/package.json
@@ -2,8 +2,9 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +13,8 @@
     "@dittolive/ditto": "^3.0.0",
     "@types/node": "^18.11.16",
     "readline": "^1.3.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4"
   }
 }
