Small fixes for CDC script

--- a/cdc/nodejs/package.json
+++ b/cdc/nodejs/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines" : { "node" : ">=16.0.0 <18.0.0" },
   "scripts": {
     "watch": "tsc -w",
     "build": "tsc",
