--- a/tasks/android-kotlin/ToDo/app/build.gradle
+++ b/tasks/android-kotlin/ToDo/app/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation "live.ditto:ditto:2.0.0-alpha1"
+    implementation "live.ditto:ditto:3.0.0"
+
+
 }
