Fix C++ sample for v4

--- a/tasks/cpp/.vscode/settings.json
+++ b/tasks/cpp/.vscode/settings.json
@@ -51,6 +51,7 @@
     "stdexcept": "cpp",
     "streambuf": "cpp",
     "typeinfo": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "format": "cpp"
   }
 }
