--- a/authentication/react/package.json
+++ b/authentication/react/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
-    "@dittolive/ditto": "^2.1.0",
+    "@dittolive/ditto": "^4.0.0-beta1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
