--- a/tasks/android-kotlin/ToDo/gradle/wrapper/gradle-wrapper.properties
+++ b/tasks/android-kotlin/ToDo/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jun 05 11:16:38 AEST 2020
+#Wed Mar 08 11:40:30 PST 2023
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-bin.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-all.zip
+zipStoreBase=GRADLE_USER_HOME
