--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dittolive-ditto = "=3.0.5"
-dittolive-ditto-sys = "=3.0.5"
+dittolive-ditto = "4.0.0"
+dittolive-ditto-sys = "=4.0.0"
 structopt = "0.3.26"
 serde_json = "1.0"
