--- a/tasks/electron-forge-react-ts/package.json
+++ b/tasks/electron-forge-react-ts/package.json
@@ -99,8 +99,8 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@dittolive/ditto": "^4.0.0-beta1",
-    "@dittolive/react-ditto": "^0.11.0-alpha.0",
+    "@dittolive/ditto": "^4.0.0",
+    "@dittolive/react-ditto": "^0.11.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
