--- a/tasks/electron-react-ts/package.json
+++ b/tasks/electron-react-ts/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dittolive/ditto": "^4.0.0-beta1",
-    "@dittolive/react-ditto": "^0.11.0-alpha.0",
+    "@dittolive/ditto": "^4.0.0",
+    "@dittolive/react-ditto": "^0.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
