--- a/authentication/iOS-auth0/Auth0.plist
+++ b/authentication/iOS-auth0/Auth0.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>ClientId</key>
-    <string>YOUR_CLIENT_ID</string>
-    <key>Domain</key>
-    <string>YOUR_DOMAIN</string>
+	<key>ClientId</key>
+	<string>Auth0_Client_ID</string>
+	<key>Domain</key>
+	<string>Auth0_Domain</string>
 </dict>
 </plist>
