--- a/tasks/android-kotlin/ToDo/build.gradle
+++ b/tasks/android-kotlin/ToDo/build.gradle
@@ -4,25 +4,13 @@ buildscript {
     ext.kotlin_version = "1.8.0"
     repositories {
         google()
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        google()
         mavenCentral()
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+plugins {
+    id "com.android.application" version "7.4.2" apply false
+    id "com.android.library" version "7.4.2" apply false
+    id "org.jetbrains.kotlin.android" version "1.8.10" apply false
 }
+
