Migrate from Kotlin synthetics to Jetpack view binding

--- a/tasks/android-kotlin/ToDo/app/src/main/AndroidManifest.xml
+++ b/tasks/android-kotlin/ToDo/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.dittolive.todo.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar"
             android:exported="true">
