Fix crash when login/logout cycling. Update README
- removed transitory persistence dir workaround
- remove ditto = nil on logout
- add strong reference to AuthDelegate and reuse
- update README with more steps detail

--- a/authentication/iOS-auth0/Auth0.plist
+++ b/authentication/iOS-auth0/Auth0.plist
@@ -3,8 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>ClientId</key>
-	<string>Auth0_Client_ID</string>
+	<string>pQK5iRdW5inFNwRd8UdMFbgUg45vuM3e</string>
 	<key>Domain</key>
-	<string>Auth0_Domain</string>
+	<string>dev-yde4hme57nj5emiw.us.auth0.com</string>
 </dict>
 </plist>
