--- a/tasks/android-kotlin/ToDo/app/build.gradle
+++ b/tasks/android-kotlin/ToDo/app/build.gradle
@@ -1,15 +1,19 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+plugins {
+    id "com.android.application"
+    id "org.jetbrains.kotlin.android"
+    id "kotlin-kapt"
+    id "androidx.navigation.safeargs.kotlin"
+    id "kotlin-android-extensions"
+}
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "29.0.3"
+    namespace "live.dittolive.chat"
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "live.dittolive.chat"
-        minSdkVersion 26
-        targetSdkVersion 30
+        minSdkVersion 29
+        targetSdkVersion 33
         versionCode 16
         versionName "3.0"
 
@@ -32,7 +36,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
@@ -41,6 +44,4 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "live.ditto:ditto:3.0.0"
-
-
 }
