--- a/tasks/android-kotlin/ToDo/build.gradle
+++ b/tasks/android-kotlin/ToDo/build.gradle
@@ -1,29 +1,27 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.4.32'
+
+    ext {
+        compose_ui_version = "1.5.0-alpha02"
+        accompanist_version = "0.29.2-rc"
+        material3_version = "1.0.1"
+        lifecycle_version = "2.6.1"
+        arch_version = "2.2.0"
+        nav_version = "2.5.3"
+        activity_version = "1.6.1"
+        hilt_version = "2.45"
+    }
+
     repositories {
         google()
-        jcenter()
         mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id "com.android.application" version "7.4.2" apply false
+    id "com.android.library" version "7.4.2" apply false
+    id "org.jetbrains.kotlin.android" version "1.8.10" apply false
 }
