--- a/tasks/android-kotlin/ToDo/build.gradle
+++ b/tasks/android-kotlin/ToDo/build.gradle
@@ -1,7 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.8.0"
     repositories {
         google()
         mavenCentral()
@@ -9,7 +8,7 @@ buildscript {
 }
 
 plugins {
-    id "com.android.application" version "7.4.2" apply false
-    id "com.android.library" version "7.4.2" apply false
-    id "org.jetbrains.kotlin.android" version "1.8.10" apply false
+    id "com.android.application" version '8.0.2' apply false
+    id "com.android.library" version '8.0.2' apply false
+    id "org.jetbrains.kotlin.android" version "1.8.21" apply false
 }
