--- a/tasks/android-kotlin/ToDo/gradle/wrapper/gradle-wrapper.properties
+++ b/tasks/android-kotlin/ToDo/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,6 @@
-#Wed Mar 08 11:40:30 PST 2023
+#Sat Jul 08 22:25:22 EDT 2023
 distributionBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-bin.zip
 distributionPath=wrapper/dists
-zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
 zipStoreBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-all.zip
+zipStorePath=wrapper/dists
