--- a/tasks/android-kotlin/ToDo/app/build.gradle
+++ b/tasks/android-kotlin/ToDo/app/build.gradle
@@ -53,9 +53,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation ("androidx.appcompat:appcompat:1.6.1")
-    implementation ("androidx.core:core-ktx:1.10.0")
+    implementation ('androidx.core:core-ktx:1.10.1')
     implementation ("androidx.constraintlayout:constraintlayout:2.1.4")
-    implementation ("com.google.android.material:material:1.8.0")
+    implementation ('com.google.android.material:material:1.9.0')
     testImplementation ("junit:junit:4.13.2")
     androidTestImplementation ("androidx.test:runner:1.5.2")
     androidTestImplementation ("androidx.test.espresso:espresso-core:3.5.1")
