♻️refactor Ditto implementation
optimize Ditto instantiation and handling
utilize same app type (cloud sync) as the other Todo apps
-> app now WORKS
-> create task is broken still, but it’s syncing with cloud, marking task as complete works both ways

--- a/tasks/jetpack-compose/app/build.gradle
+++ b/tasks/jetpack-compose/app/build.gradle
@@ -22,6 +22,13 @@ android {
     }
 
     buildTypes {
+        debug{
+            def credsFile = rootProject.file("secure\\debug_creds.properties")
+            def prop = new Properties()
+            prop.load(new FileInputStream(credsFile))
+            buildConfigField('String', 'DITTO_APP_ID', prop['DITTO_APP_ID']) // always use single quotes here
+            buildConfigField('String', 'DITTO_LICENSE_TOKEN', prop['DITTO_LICENSE_TOKEN'])
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
